tests/run-make/unknown-mod-stdin/unknown-mod.stderr
error[E0583]: file not found for module `unknown`
 --> <anon>:1:1
  |
1 | mod unknown;
  | ^^^^^^^^^^^^
  |
  = help: to create the module `unknown`, create file "unknown.rs" or "unknown/mod.rs"
  = note: if there is a `mod unknown` elsewhere in the crate already, import it with `use crate::...` instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0583`.
